Composer is now valid

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "doppiogancio/example-project",
     "description": "An example project to show the benefit of Mocked Client",
+    "type": "library",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "DoppioGancio\\ExampleProject\\": "src/"
